refactor: simplify configuration scripts etc
Common upgrades:
- Perform "no-apt" package installation in a separate file.
- Perform user configuration in a separate file.
- Perform apt-repository configuration in a separate file.
- Improve variable usage so that no unneccessary variables are defined.
- Simplify custom bashrc definition.
- Add new checks to pre-commit hook:
    - check_matches_for_renamed_files
    - check_matches_for_added_files
    - check_matches_for_modified_files
    --> It is verified that files are referred somewhere and that is done in a
minimal way.
    - Whitelist parser script was created to allow some exceptions.
- Init script simplified
- Create needed scripts to perform test package installation in a container
  with a same user IDs as in host.
- Add host-gateway as internal host
- Add bash-completion package

Related only to this repo:
- Install kubectl
- Install k3d
- Update ruff
- Add kubernetes VSCode plugin

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,8 +9,11 @@
             "HOST_GID": "1003",
             "PACKAGES_DEVENV_FILENAME": "packages-devenv.txt",
             "PACKAGES_DEVLINT_FILENAME": "packages-devlint.txt",
+            "REPOS_DEVENV_FILENAME": "repos-devenv.sh",
             "IMAGEFILES_DIR": "imagefiles",
-            "BASE_IMAGE": "python:3.11.9-bookworm"
+            "BASE_IMAGE": "python:3.11.9-bookworm",
+            "DEVUSER": "devroot",
+            "CONFIGURE_DEVUSER_FILENAME": "configure-devuser.sh"
         }
     },
     "workspaceFolder": "/dev-env/${localWorkspaceFolderBasename}",
@@ -21,7 +24,7 @@
     ],
     "updateRemoteUserUID": false,
     "remoteUser": "devroot",
-    "initializeCommand": "${localWorkspaceFolder}/.devcontainer/init/initscript.sh ${localWorkspaceFolder}",
+    "initializeCommand": "${localWorkspaceFolder}/.devcontainer/init/initscript.sh",
     "containerUser": "devroot",
     "onCreateCommand": "./.devcontainer/customize-dev-env.sh",
     "postAttachCommand": "./.devcontainer/postAttach.sh",
@@ -44,8 +47,12 @@
                 "ms-azuretools.vscode-docker",
                 "redhat.vscode-yaml",
                 "GitHub.copilot",
-                "GitHub.copilot-chat"
+                "GitHub.copilot-chat",
+                "ms-kubernetes-tools.vscode-kubernetes-tools"
             ]
         }
-    }
+    },
+    "runArgs": [
+        "--add-host=host.docker.internal:host-gateway"
+    ]
 }
