--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,4 +4,9 @@
     ],
     "files.autoSave": "onFocusChange",
     "editor.formatOnSave": true,
+    "files.exclude": {
+        "**/.git": true,
+        "**/.ruff_cache": true
+    },
+    "shellcheck.useWorkspaceRootAsCwd": true
 }
