--- a/excercise102/manifests/deployment.yaml
+++ b/excercise102/manifests/deployment.yaml
@@ -23,3 +23,8 @@ spec:
           requests:
             cpu: "100m"
             memory: "256Mi"
+        readinessProbe:
+          tcpSocket:
+            port: 8000
+          initialDelaySeconds: 5
+          periodSeconds: 10
