Excercise 1.05: Have the project respond something to a GET request

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -54,5 +54,8 @@
     },
     "runArgs": [
         "--add-host=host.docker.internal:host-gateway"
+    ],
+    "forwardPorts": [
+        3000
     ]
 }
