Excercise 1.07: External access with Ingress
"Log output" application currently outputs a timestamp and a random string to the logs.

Add an endpoint to request the current status (timestamp and string) and an ingress so
that you can access it with a browser.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,7 @@
         "**/.git": true,
         "**/.ruff_cache": true
     },
-    "shellcheck.useWorkspaceRootAsCwd": true
+    "shellcheck.useWorkspaceRootAsCwd": true,
+    "remote.autoForwardPorts": false,
+    "remote.forwardOnOpen": false
 }
