--- a/simple-server/manifests/service.yaml
+++ b/simple-server/manifests/service.yaml
@@ -3,12 +3,10 @@ kind: Service
 metadata:
   name: simple-server-svc
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
-    app: simple-server # This is the app as declared in the deployment.
+    app: simple-server
   ports:
-    - name: http
-      nodePort: 30080 # This is the port that is available outside. Value for nodePort can be between 30000-32767
+    - port: 1234
       protocol: TCP
-      port: 1234 # This is a port that is available to the cluster, in this case it can be ~ anything
-      targetPort: 3000 # This is the target port
+      targetPort: 3000
