--- a/simple-server/manifests/ingress.yaml
+++ b/simple-server/manifests/ingress.yaml
@@ -2,6 +2,8 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: simple-server-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
   - http:
@@ -13,3 +15,10 @@ spec:
             name: simple-server-svc
             port:
               number: 1234
+      - path: /pingpong
+        pathType: Prefix
+        backend:
+          service:
+            name: pingpong-svc
+            port:
+              number: 109
