Exercise 1.11: Persisting data
Let's share data between "Ping-pong" and "Log output" applications using persistent volumes.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,9 @@
     },
     "shellcheck.useWorkspaceRootAsCwd": true,
     "remote.autoForwardPorts": false,
-    "remote.forwardOnOpen": false
+    "remote.forwardOnOpen": false,
+    "files.associations": {
+        "*.yml": "yaml",
+        "*.yaml": "yaml"
+    },
 }
