--- a/random-log-server/Dockerfile
+++ b/random-log-server/Dockerfile
@@ -5,6 +5,6 @@ COPY . /app
 
 CMD ["./run_random_string_printer.sh"]
 
-FROM random-string-printer AS log-server
+FROM random-string-printer AS random-log-server
 
 CMD ["./run_log_server.sh"]
