--- a/global-values.yaml
+++ b/global-values.yaml
@@ -1,12 +1,10 @@
-projectAppName: project
+---
 projectAppServiceName: project-svc
 projectAppClusterPort: 1010
 projectAppPort: 3010
-pingPongAppName: pingpong
 pingPongAppServiceName: pingpong-svc
 pingPongAppClusterPort: 1020
 pingPongAppPort: 3020
-randomLogServerAppName: random-log-server
 randomLogServerAppServiceName: random-log-server-svc
 randomLogServerAppClusterPort: 1030
 randomLogServerAppPort: 3030
@@ -17,3 +15,7 @@ pongFileMountPath: /pong
 pongFileName: pong.txt
 sharedPersistentVolumeName: shared-volume
 sharedPersistentVolumeClaimName: shared-volume-claim
+randomPictureFileMountPath: /random-picture
+randomPictureFileName: random_picture.jpg
+tempStartupScriptVolumeName: temp-startup-script-volume
+tempScriptVolumeMountPath: /startup-scripts
