--- a/imagefiles/requirements-dev.txt
+++ b/imagefiles/requirements-dev.txt
@@ -4,11 +4,13 @@
 #
 #    pip-compile /dev-env/devopswithkubernetes/imagefiles/requirements-dev.in
 #
+isort==5.13.2
+    # via -r /dev-env/devopswithkubernetes/imagefiles/requirements-dev.in
 pathspec==0.12.1
     # via yamllint
 pyyaml==6.0.2
     # via yamllint
-ruff==0.6.7
+ruff==0.6.8
     # via -r /dev-env/devopswithkubernetes/imagefiles/requirements-dev.in
 yamllint==1.35.1
     # via -r /dev-env/devopswithkubernetes/imagefiles/requirements-dev.in
