--- a/project/apps/random-log-server/Dockerfile
+++ b/project/apps/random-log-server/Dockerfile
@@ -1,3 +1,10 @@
 FROM python:3.11-slim AS random-string-printer
 
+RUN pip --no-cache-dir install \
+    certifi==2024.8.30 \
+    charset-normalizer==3.3.2 \
+    idna==3.10 \
+    requests==2.32.3 \
+    urllib3==2.2.3
+
 FROM python:3.11-slim AS random-log-server
