--- a/.devcontainer/git-hooks/htmlhint/Dockerfile
+++ b/.devcontainer/git-hooks/htmlhint/Dockerfile
@@ -2,4 +2,6 @@ FROM node:alpine
 RUN npm install -g htmlhint@latest
 ARG WORKSPACE
 COPY $WORKSPACE /workspace
+WORKDIR /workspace
+
 ENTRYPOINT ["htmlhint"]
