--- a/base_templates/templates/ingress.yaml
+++ b/base_templates/templates/ingress.yaml
@@ -3,15 +3,17 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: "{{index .containerNames 0}}-ingress"
+  name: {{index .containerNames 0}}-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
+  ingressClassName: nginx
   rules:
     - http:
         paths:
-          - path: "/{{index .containerNames 0}}"
-            pathType: Prefix
+          - path: /{{index .containerNames 0}}(/|$)(.*)
+            pathType: ImplementationSpecific
             backend:
               service:
                 name: {{.serviceName}}
