--- a/project/apps/frontend/manifests/templates/ingress.yaml
+++ b/project/apps/frontend/manifests/templates/ingress.yaml
@@ -4,13 +4,12 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{index .containerNames 0}}-ingress
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
+  ingressClassName: nginx
   rules:
     - http:
         paths:
-          - path: "/"
+          - path: /
             pathType: Prefix
             backend:
               service:
